<resources>
    <string name="app_name">BuzzTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_empty_password">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_start">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="logout_button">Logout</string>

    <!-- String related to registration -->
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="user_type">User Type</string>
    <string name="location">Location (if location employee)</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="manager_if_applicable">Manager (if location employee)</string>
    <string name="email_already_used">This email is already associated with an account</string>
    <string name="error_invalid_phone_number">Please enter a valid phone number</string>
    <string name="error_invalid_name">Please enter a valid name</string>
    <string name="error_password_must_match">Passwords must match</string>
    <string name="error_password_strength">Password must have at least:
        8 characters,
        an uppercase letter,
        a lowercase letter,
        and a number
    </string>
    <string-array name="user_types">
        <item>User</item>
        <item>Location Employee</item>
        <item>Admin</item>
        <item>Manager</item>
    </string-array>
    <string name="title_location_list">Locations</string>
    <string name="title_location_detail">Location Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- String related to item registration -->
    <string name="short_description_of_item">Short description of item</string>
    <string name="full_description_of_item">Full description of item</string>
    <string name="monetary_value_of_item">Item cost</string>
    <string name="user_comments">Other comments (optional)</string>
    <string name="create_item">Create Item</string>
    <string name="add_item">Add Item</string>
    <string name="error_invalid_cost">This is an invalid value</string>
    <string name="add_new_item">Add New Item</string>
    <string name="return_to_main_screen">Return to Main Screen</string>
    <string name="search">Search</string>
    <string name="search_keywords">Search Keywords</string>
    <string name="sort_by_category">Search by Category</string>
    <string name="search_by_keyword">Search by Keyword</string>
    <string name="return_to_search">Return to search</string>
    <string-array name="item_categories">
        <item>Clothing</item>
        <item>Hat</item>
        <item>Kitchen</item>
        <item>Electronics</item>
        <item>Household</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="error_user_already_exists">User already exists with this email</string>
    <string name="account_creation_success">Account successfully created</string>
    <string name="login_success">Successfully logged in</string>
    <string name="search_no_matches">No items match search criteria</string>
    <string name="locations_return_text">Return to Main Screen</string>
    <string name="buzztracker">BuzzTracker</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="locations">Locations</string>
    <string name="inventory">Inventory</string>
    <string name="map">Map</string>
</resources>
